syntax = "proto3";

import "module.proto";
import "proxy.proto";

option csharp_namespace = "Centurion.Contracts";
option go_package = "github.com/CenturionLabs/centurion/checkout-service/contracts";
option java_package = "gg.centurion.contract";


message FetchProductCommand {
  Module module = 1;
  string sku = 2;
  repeated ProxyData proxies = 3;
}

message ProductData {
  string sku = 1;
  string name = 2;
  string image = 3;
  string link = 4;
  Module module = 5;
  optional double price = 6;
}